INCLUDE_DIRECTORIES( 
  ${Boost_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/3RDPARTY/TinyXML
  ${PROJECT_SOURCE_DIR}/3RDPARTY/TetGen
  ${PROJECT_SOURCE_DIR}/3RDPARTY/QHull/QHull/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/UTIL/UTIL/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/TINY/TINY/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/GEOMETRY/GEOMETRY/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/CONVEX/CONVEX/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/SPARSE/SPARSE/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/MASS/MASS/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/KDOP/KDOP/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/BROAD/BROAD/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/NARROW/NARROW/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/PROX/PROX/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/CONTENT/CONTENT/include 
  ${PROJECT_SOURCE_DIR}/SIMULATION/SIMULATORS/SIMULATORS/include 
  ${PROJECT_SOURCE_DIR}/SIMULATION/PROCEDURAL/PROCEDURAL/include 
  ${PROJECT_SOURCE_DIR}/APPLICATIONS/RIGID_BODY/RIGID_BODY_CMD/include 
)

FILE(GLOB 
  RIGID_BODY_CMD_SOURCES
  src/*.cpp 
  )

FILE(GLOB
  RIGID_BODY_CMD_HEADERS
  include/*.h 
  )

FILE(GLOB
  RIGID_BODY_CMD_CFGS
  ${PROJECT_SOURCE_DIR}/bin/rigid_body_cmd/*.cfg
  )

ADD_EXECUTABLE(
  rigid_body_cmd 
  ${RIGID_BODY_CMD_SOURCES} 
  ${RIGID_BODY_CMD_HEADERS}
  ${RIGID_BODY_CMD_CFGS}
  )

TARGET_LINK_LIBRARIES(
  rigid_body_cmd
  simulators
  procedural
  content
  tiny
  sparse
  convex
  geometry
  mesh_array
  kdop
  narrow
  broad
  prox
  mass
  util
  tetgen
  tinyxml
  qhull
  ${Boost_SYSTEM_LIBRARIES} 
  ${Boost_FILESYSTEM_LIBRARIES} 
  )

IF(HAS_DIKUCL)
  TARGET_LINK_LIBRARIES(rigid_body_cmd dikucl)
ENDIF(HAS_DIKUCL)

SOURCE_GROUP(Config    FILES ${RIGID_BODY_CMD_CFGS})

SET_TARGET_PROPERTIES(rigid_body_cmd PROPERTIES DEBUG_POSTFIX "D" )
SET_TARGET_PROPERTIES(rigid_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/bin/rigid_body_cmd")
SET_TARGET_PROPERTIES(rigid_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/bin/rigid_body_cmd")
SET_TARGET_PROPERTIES(rigid_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/bin/rigid_body_cmd")
SET_TARGET_PROPERTIES(rigid_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/bin/rigid_body_cmd")
SET_TARGET_PROPERTIES(rigid_body_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/bin/rigid_body_cmd")
