SET( CMAKE_INCLUDE_CURRENT_DIR ON                                     )
SET( CMAKE_AUTOMOC ON                                                 )

SET( RIGID_BODY_GUI_CODE_PATH     "${PROJECT_SOURCE_DIR}/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI"         )
SET( RIGID_BODY_GUI_NAME          "rigid_body_gui"                                                       )
SET( RIGID_BODY_GUI_RUN_PATH      "${PROJECT_SOURCE_DIR}/bin/rigid_body_gui"                             )
SET( RIGID_BODY_GUI_TEXTURES_PATH "${PROJECT_SOURCE_DIR}/resources/textures"                             )
SET( RIGID_BODY_GUI_OBJS_PATH     "${PROJECT_SOURCE_DIR}/resources/objs"                                 )
SET( RIGID_BODY_GUI_CFGS_PATH     "${PROJECT_SOURCE_DIR}/bin/rigid_body_gui"                             )

INCLUDE_DIRECTORIES(
  ${GLM_INCLUDE_DIR}
  ${GLEW_INCLUDE_DIR}
  ${Boost_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/3RDPARTY/TinyXML
  ${PROJECT_SOURCE_DIR}/3RDPARTY/TetGen
  ${PROJECT_SOURCE_DIR}/3RDPARTY/QHull/QHull/include
  ${PROJECT_SOURCE_DIR}/3RDPARTY/GLM/glm_0_9_5_4/
  ${PROJECT_SOURCE_DIR}/FOUNDATION/GL3/GL3/include    
  ${PROJECT_SOURCE_DIR}/FOUNDATION/UTIL/UTIL/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/TINY/TINY/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/SPARSE/SPARSE/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/GEOMETRY/GEOMETRY/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/MASS/MASS/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/KDOP/KDOP/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/NARROW/NARROW/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/BROAD/BROAD/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/PROX/PROX/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/CONTENT/CONTENT/include 
  ${PROJECT_SOURCE_DIR}/SIMULATION/PROCEDURAL/PROCEDURAL/include 
  ${PROJECT_SOURCE_DIR}/SIMULATION/SIMULATORS/SIMULATORS/include
  ${PROJECT_SOURCE_DIR}/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI_SHARED/include 
  ${RIGID_BODY_GUI_CODE_PATH}/include  
)

IF(HAS_DIKUCL)
  INCLUDE_DIRECTORIES(
      ${PROJECT_SOURCE_DIR}/FOUNDATION/DIKUCL/DIKUCL/include 
    )
ENDIF(HAS_DIKUCL)

FILE(GLOB 
  RIGID_BODY_GUI_SOURCES
  ${RIGID_BODY_GUI_CODE_PATH}/src/*.cpp 
  )

FILE(GLOB
  RIGID_BODY_GUI_HEADERS
  ${RIGID_BODY_GUI_CODE_PATH}/include/*.h 
  )

FILE(GLOB
  RIGID_BODY_GUI_CFGS
  ${RIGID_BODY_GUI_CFGS_PATH}/*.cfg
  )

#------------------------------------------------------------------------------

ADD_EXECUTABLE(
  ${RIGID_BODY_GUI_NAME} 
  ${RIGID_BODY_GUI_SOURCES} 
  ${RIGID_BODY_GUI_HEADERS}
  ${RIGID_BODY_GUI_CFGS}
  )

TARGET_LINK_LIBRARIES(
  ${RIGID_BODY_GUI_NAME}
  gl3
  content
  simulators
  procedural
  rigid_body_gui_shared
  mass
  broad
  narrow
  kdop
  prox
  tiny
  sparse
  convex
  geometry
  mesh_array
  util
  tetgen
  tinyxml
  qhull
  Qt5::Widgets
  Qt5::Gui
  Qt5::Core
  Qt5::OpenGL
  ${Boost_SYSTEM_LIBRARIES} 
  ${Boost_FILESYSTEM_LIBRARIES} 
  ${OPENGL_LIBRARIES}
  ${GLEW_LIBRARIES}
  ${DEVIL_LIBRARIES}
  )

IF(HAS_DIKUCL)
  TARGET_LINK_LIBRARIES( ${RIGID_BODY_GUI_NAME} dikucl)
ENDIF(HAS_DIKUCL)

SOURCE_GROUP(Config    FILES ${RIGID_BODY_GUI_CFGS})

SET_TARGET_PROPERTIES(${RIGID_BODY_GUI_NAME} PROPERTIES DEBUG_POSTFIX "D" )

SET_TARGET_PROPERTIES(${RIGID_BODY_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${RIGID_BODY_GUI_RUN_PATH}")
SET_TARGET_PROPERTIES(${RIGID_BODY_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${RIGID_BODY_GUI_RUN_PATH}")
SET_TARGET_PROPERTIES(${RIGID_BODY_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${RIGID_BODY_GUI_RUN_PATH}")
SET_TARGET_PROPERTIES(${RIGID_BODY_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${RIGID_BODY_GUI_RUN_PATH}")
SET_TARGET_PROPERTIES(${RIGID_BODY_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${RIGID_BODY_GUI_RUN_PATH}")
