INCLUDE_DIRECTORIES( 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/CONVEX/CONVEX/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/TINY/TINY/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/GEOMETRY/GEOMETRY/include
  ${Boost_INCLUDE_DIRS}
)

FILE(GLOB
  CONVEX_SOURCES
  ${PROJECT_SOURCE_DIR}/FOUNDATION/CONVEX/CONVEX/src/*.cpp 
  )
FILE(GLOB 
  CONVEX_HEADERS 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/CONVEX/CONVEX/include/*.h 
  )

ADD_DEFINITIONS("${3RDPARTY_DEF}")

ADD_LIBRARY( 
  convex 
  ${CONVEX_SOURCES} 
  ${CONVEX_HEADERS} 
  )

TARGET_LINK_LIBRARIES(
  convex
  tiny
  geometry
  )

SET_TARGET_PROPERTIES(convex PROPERTIES DEBUG_POSTFIX "D" )

SET_TARGET_PROPERTIES(convex PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(convex PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(convex PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(convex PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(convex PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
