IF(HAS_DIKUCL)

  
  CONFIGURE_FILE(
    "${PROJECT_SOURCE_DIR}/SIMULATION/NARROW/NARROW/include/cl/narrow_cl_kernels_path.h.in"
    "${PROJECT_SOURCE_DIR}/SIMULATION/NARROW/NARROW/include/cl/narrow_cl_kernels_path.h"
    @ONLY
    )

  INCLUDE_DIRECTORIES(
      ${PROJECT_SOURCE_DIR}/FOUNDATION/DIKUCL/DIKUCL/include 
    )
  
ENDIF(HAS_DIKUCL)

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/FOUNDATION/TINY/TINY/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/GEOMETRY/GEOMETRY/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/CONVEX/CONVEX/include 
  ${PROJECT_SOURCE_DIR}/SIMULATION/NARROW/NARROW/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/KDOP/KDOP/include
  ${Boost_INCLUDE_DIR}
)

FILE(GLOB 
  NARROW_SOURCES
  src/*.cpp
  )

FILE(GLOB
  NARROW_HEADERS
  include/*.h
  )

IF(HAS_DIKUCL)
FILE(GLOB
  NARROW_CL_HEADERS
  include/cl/*.h
  include/cl/kernels/*.h
  include/cl/*.cl
  include/cl/kernels/*.cl
  include/cl/*.clh
  include/cl/kernels/*.clh
  )
ENDIF(HAS_DIKUCL)

ADD_LIBRARY( 
  narrow
  ${NARROW_SOURCES}  
  ${NARROW_HEADERS}
  ${NARROW_CL_HEADERS}
  )

TARGET_LINK_LIBRARIES(
  narrow
  kdop
  tiny
  geometry
  mesh_array
  convex
)

IF(HAS_DIKUCL)
  TARGET_LINK_LIBRARIES(narrow dikucl)
ENDIF(HAS_DIKUCL)

SET_TARGET_PROPERTIES(narrow PROPERTIES DEBUG_POSTFIX "D" )
SET_TARGET_PROPERTIES(narrow PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(narrow PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(narrow PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(narrow PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(narrow PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
