INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/FOUNDATION/TINY/TINY/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/SPARSE/SPARSE/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/GEOMETRY/GEOMETRY/include 
  ${PROJECT_SOURCE_DIR}/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/CONVEX/CONVEX/include 
  ${PROJECT_SOURCE_DIR}/SIMULATION/NARROW/NARROW/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/KDOP/KDOP/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/BROAD/BROAD/include 
  ${PROJECT_SOURCE_DIR}/SIMULATION/PROX/PROX/include 
  ${Boost_INCLUDE_DIRS}
)

IF(HAS_DIKUCL)
  INCLUDE_DIRECTORIES(
      ${PROJECT_SOURCE_DIR}/FOUNDATION/DIKUCL/DIKUCL/include 
    )
ENDIF(HAS_DIKUCL)

FILE(GLOB 
  PROX_SOURCES 
  src/*.cpp
  )

FILE(GLOB
  PROX_HEADERS
  include/*.h
  include/steppers/*.h
  include/solvers/*.h
  include/solvers/sub/*.h
  include/solvers/strategies/*.h
  )

ADD_LIBRARY( 
  prox 
  ${PROX_SOURCES}  
  ${PROX_HEADERS}
)

TARGET_LINK_LIBRARIES(
  prox
  tiny
  sparse
  geometry
  convex
  mesh_array
  broad
  narrow
  kdop
)

IF(HAS_DIKUCL)
  TARGET_LINK_LIBRARIES(prox dikucl)
ENDIF()

#IF( OPENMP_FOUND )
#  SET_TARGET_PROPERTIES(prox PROPERTIES XCODE_ATTRIBUTE_ENABLE_OPENMP_SUPPORT "YES")
#ENDIF()

SET_TARGET_PROPERTIES(prox PROPERTIES DEBUG_POSTFIX "D" )

SET_TARGET_PROPERTIES(prox PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(prox PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(prox PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(prox PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(prox PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")

# Add folders to filters

FILE(GLOB
  PROX_NARROW
  include/narrow/*.h
  )

FILE(GLOB
  PROX_SOLVERS
  include/solvers/*.h
  include/solvers/sub/*.h
  include/solvers/strategies/*.h
  )

FILE(GLOB
  PROX_STEPPERS
  include/steppers/*.h
  )

SOURCE_GROUP(narrow    FILES ${PROX_NARROW})
SOURCE_GROUP(steppers  FILES ${PROX_STEPPERS})
SOURCE_GROUP(solvers   FILES ${PROX_SOLVERS})
