#-----------------------------------------------------------------------------

INCLUDE_DIRECTORIES( 
  ${Boost_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/3RDPARTY/TinyXML
  ${PROJECT_SOURCE_DIR}/3RDPARTY/TetGen
  ${PROJECT_SOURCE_DIR}/3RDPARTY/QHull/QHull/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/UTIL/UTIL/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/TINY/TINY/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/GEOMETRY/GEOMETRY/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/CONVEX/CONVEX/include
  ${PROJECT_SOURCE_DIR}/FOUNDATION/SPARSE/SPARSE/include  
  ${PROJECT_SOURCE_DIR}/SIMULATION/CONTENT/CONTENT/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/MASS/MASS/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/KDOP/KDOP/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/BROAD/BROAD/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/NARROW/NARROW/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/PROX/PROX/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/SIMULATORS/SIMULATORS/include
  ${PROJECT_SOURCE_DIR}/SIMULATION/SIMULATORS/SIMULATORS/private
)
INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/FOUNDATION/DIKUCL/DIKUCL/include 
  )

FILE(GLOB 
  SIMULATORS_SOURCES
  src/*.cpp
  )

FILE(GLOB
  SIMULATORS_HEADERS
  include/*.h
  private/*.h
  )

ADD_LIBRARY( 
  simulators 
  ${SIMULATORS_SOURCES}  
  ${SIMULATORS_HEADERS}
)

TARGET_LINK_LIBRARIES(
  simulators
  content
  tiny
  sparse
  convex
  geometry
  mesh_array
  kdop
  narrow
  broad
  prox
  mass
  util
  tetgen
  tinyxml
  qhull
)

IF(HAS_DIKUCL)
  TARGET_LINK_LIBRARIES(simulators dikucl)
ENDIF(HAS_DIKUCL)

#IF( OPENMP_FOUND )
#  SET_TARGET_PROPERTIES(simulators PROPERTIES XCODE_ATTRIBUTE_ENABLE_OPENMP_SUPPORT "YES")
#ENDIF()

SET_TARGET_PROPERTIES(simulators PROPERTIES DEBUG_POSTFIX "D" )
SET_TARGET_PROPERTIES(simulators PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(simulators PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(simulators PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(simulators PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(simulators PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
